<resources>
    <string name="app_name">Apartment Finder</string>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_extend_search">ExtendSearch</string>
    <string name="title_activity_profile_of_user">ProfileOfUser</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="title_activity_ad_log_in">AdLogIn</string>
    <string name="title_activity_waiting">Waiting</string>

    <string name="hint_principal">Principal Amount ৳</string>
    <string name="hint_interest">Interest rate per Year %</string>
    <string name="hint_years">How Many Years</string>
    <string name="hint_emi">EMI ৳</string>
    <string name="hint_interest_total">Total Interest for Loan ৳</string>

    <string-array name="divisions">
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Barisal</item>
        <item>Khulna </item>
        <item>Mymensingh </item>
        <item>Rajshahi  </item>
        <item>Sylhet  </item>
    </string-array>

    <string-array name="Dhaka_districts">
        <item>Dhaka</item>
        <item>Chittagong</item>
        <item>Barisal</item>
        <item>Khulna </item>
        <item>Mymensingh </item>
        <item>Rajshahi  </item>
        <item>Sylhet  </item>
    </string-array>


</resources>
